--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,44 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  background: linear-gradient(268deg, #f96969, #69a8f9);
+  background-size: 400% 400%;
+
+  -webkit-animation: gradient 30s ease infinite;
+  -moz-animation: gradient 30s ease infinite;
+  animation: gradient 30s ease infinite;
+}
+
+.app_content {
+  /* border: 1px solid black; */
+  margin-bottom: 20px;
+  width: 30%;
+}
+
+.app_button {
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+}
+
+@-webkit-keyframes gradient {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@-moz-keyframes gradient {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@keyframes gradient {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
 }
