--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,9 @@
 .App {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  text-align: center;
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(268deg, #f96969, #69a8f9);
+  background: linear-gradient(270deg, #f96969, #69a8f9);
   background-size: 400% 400%;
 
   -webkit-animation: gradient 30s ease infinite;
@@ -14,12 +11,30 @@
   animation: gradient 30s ease infinite;
 }
 
+.app_header {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    border-bottom:1px solid lightgrey;
+    /* maintains aspect ratio of logo */
+    object-fit: contain;
+    background: linear-gradient(0deg, #f96969,  #69a8f9);
+    background-size: 400% 400%;
+
+    -webkit-animation: gradient 30s ease infinite;
+    -moz-animation: gradient 30s ease infinite;
+    animation: gradient 30s ease infinite;
+}
+
 .app_intro {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  text-align: center;
+  margin: auto;
   width: 50%;
   height: 25%;
   /* border: 1px solid black; */
